methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (depart = true){
             ^SlugTracking:15: error: type mismatch;
 found   : Unit
 required: Boolean
  depart = false
         ^